[FIX] basket tag including

--- a/basket_2.html
+++ b/basket_2.html
@@ -52,22 +52,22 @@
                 <div class="container basket__container">
                     <h2>Добавить к заказу?</h2>
                 </div>
-                <div class="container basket__container">
-                    <div class="price">
-                        <p>Сумма заказа: <span>4 792 ₽</span></p>
-                    </div>
-                    <div class="buttons">
-                        <a href="basket_1.html" class="button button--grey back">
-                            <img src="./icons/arrow_right.svg" alt="назад">
-                            <span>Назад в корзину</span>
-                        </a>
-                        <a href="basket_3.html" class="button button--orange">
-                            <span>Оформить заказ на 675 ₽ </span>
-                            <img src="./icons/arrow_right.svg" alt="вперед">
-                        </a>
-                    </div>
-                </div>
             </section>
+            <div class="container basket__container">
+                <div class="price">
+                    <p>Сумма заказа: <span>4 792 ₽</span></p>
+                </div>
+                <div class="buttons buttons__basket2">
+                    <a href="basket_1.html" class="button button--grey back">
+                        <img src="./icons/arrow_right.svg" alt="назад">
+                        <span>Назад в корзину</span>
+                    </a>
+                    <a href="basket_3.html" class="button button--orange">
+                        <span>Оформить заказ на 675 ₽ </span>
+                        <img src="./icons/arrow_right.svg" alt="вперед">
+                    </a>
+                </div>
+            </div>
         </main>
     </div>
     <footer class="footer">
