--- a/basket_3.html
+++ b/basket_3.html
@@ -45,29 +45,24 @@
         <main>
             <section>
                 <div class="container basket__container">
-                    <h1 class="title">Заказ на доставку</h1>
-                </div>
-            </section>
-            <section class="new">
-                <div class="container basket__container">
-                    <h2>Добавить к заказу?</h2>
-                </div>
-                <div class="container basket__container">
-                    <div class="price">
-                        <p>Сумма заказа: <span>4 792 ₽</span></p>
-                    </div>
-                    <div class="buttons">
-                        <a href="basket_2.html" class="button button--grey back">
-                            <img src="./icons/arrow_right.svg" alt="назад">
-                            <span>Отменить заказ</span>
-                        </a>
-                        <a href="index.html" class="button button--orange">
-                            <span>Вернуться в меню</span>
-                            <img src="./icons/arrow_right.svg" alt="вперед">
-                        </a>
+                    <div class="title_wrapper">
+                        <h1 class="title">Приняли</h1>
+                        <h1 class="title">24 минуты</h1>
                     </div>
                 </div>
             </section>
+            <div class="container basket__container">
+                <div class="buttons">
+                    <a href="basket_2.html" class="button button--grey back">
+                        <!-- <img src="./icons/arrow_right.svg" alt="назад"> -->
+                        <span>Отменить заказ</span>
+                    </a>
+                    <a href="index.html" class="button button--orange">
+                        <span>Вернуться в меню</span>
+                        <!-- <img src="./icons/arrow_right.svg" alt="вперед"> -->
+                    </a>
+                </div>
+            </div>
         </main>
     </div>
     <footer class="footer">
