basket_page buttons in cards

--- a/basket_1.html
+++ b/basket_1.html
@@ -58,28 +58,28 @@
                             <img src="./img/pizza/cezar/cezar-traditional-big.jpeg" alt="Пицца Цезарь">
                             <div class="new__text">
                                 <div class="new__name">Цезарь</div>
-                                <div class="new__price">от 445 ₽</div>
+                                <div class="new__price button">445 ₽</div>
                             </div>
                         </div>
                         <div class="new__card buy pizza">
                             <img src="./img/pizza/tender-salmon/tender-salomon-traditional-small.jpeg" alt="Нежный лосось">
                             <div class="new__text">
                                 <div class="new__name">Нежный лосось</div>
-                                <div class="new__price">от 495 ₽</div>
+                                <div class="new__price button">495 ₽</div>
                             </div>
                         </div>
                         <div class="new__card buy pizza">
                             <img src="./img/combo/combo_2.jpg" alt="2 пиццы">
                             <div class="new__text">
                                 <div class="new__name">2 пиццы</div>
-                                <div class="new__price">899 ₽</div>
+                                <div class="new__price button">899 ₽</div>
                             </div>
                         </div>
                         <div class="new__card buy pizza">
                             <img src="./img/pizza/carbonara/carbonara-traditional-small.jpeg" alt="Пицца Карбонара">
                             <div class="new__text">
                                 <div class="new__name">Карбонара</div>
-                                <div class="new__price">от 395 ₽</div>
+                                <div class="new__price button">395 ₽</div>
                             </div>
                         </div>
                     </div>
