--- a/basket_1.html
+++ b/basket_1.html
@@ -51,7 +51,6 @@
             <section>
                 <div class="container basket__container">
                     <div class="goods">
-                        <hr>
                         <div class="goods__row">
                             <div class="goods__wrapper">
                                 <div class="goods__img">
@@ -70,7 +69,24 @@
                                 <img src="./icons/delete.svg" alt="удалить товар">
                             </div>
                         </div>
-                        <hr>
+                        <div class="goods__row">
+                            <div class="goods__wrapper">
+                                <div class="goods__img">
+                                    <img src="./img/combo/combo_3.jpg" alt="combo">
+                                </div>
+                                <div class="goods__text">
+                                    <p class="goods__header">Чиззи чеддер</p>
+                                    <p class="goods__descr">Средняя 30 см, традиционное тесто</p>
+                                </div>
+                            </div>
+                            <div class="goods__count"></div>
+                            <div class="goods__price">
+                                <p>3 799 ₽</p>
+                            </div>
+                            <div class="goods__delete">
+                                <img src="./icons/delete.svg" alt="удалить товар">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
