--- a/basket_3.html
+++ b/basket_3.html
@@ -45,21 +45,24 @@
         <main>
             <section>
                 <div class="container basket__container">
+                    <p class="suptitle">Заказ №62</p>
                     <div class="title_wrapper">
                         <h1 class="title">Приняли</h1>
                         <h1 class="title">24 минуты</h1>
                     </div>
+                    <hr>
                 </div>
             </section>
             <div class="container basket__container">
+                <p class="address">Доставим по адресу: Москва, ул. 1-я Машиностроения, д. 10</p>
+            </div>
+            <div class="container basket__container">
                 <div class="buttons">
-                    <a href="basket_2.html" class="button button--grey back">
-                        <!-- <img src="./icons/arrow_right.svg" alt="назад"> -->
+                    <a href="basket_2.html" class="button back">
                         <span>Отменить заказ</span>
                     </a>
                     <a href="index.html" class="button button--orange">
                         <span>Вернуться в меню</span>
-                        <!-- <img src="./icons/arrow_right.svg" alt="вперед"> -->
                     </a>
                 </div>
             </div>
